--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.poma.restaurant">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <uses-feature android:name="android.hardware.type.watch" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,9 +14,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Restaurant">
         <activity
+            android:name=".login.Activity_Password"
+            android:label="@string/title_activity__password">
+
+        </activity>
+
+
+
+        <activity
+            android:name=".login.Activity_Account"
+            android:label="@string/title_activity_account"
+            android:theme="@style/Theme.AppCompat.Light" />
+        <activity
             android:name=".login.Activity_Register"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
-        <activity android:name=".menu.Activity_Menu" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".menu.Activity_Menu"
+            android:label="@string/title_activity_basic"
+            android:theme="@style/Theme.AppCompat.Light" />
         <activity
             android:name=".login.Activity_Login"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
