--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,15 @@
 
     <uses-feature android:name="android.hardware.type.watch" />
 
+    <uses-sdk android:minSdkVersion="28" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Restaurant"
+        android:theme="@style/Theme.Restaurant.NoActionBar"
         android:usesCleartextTraffic="true">
         <activity
             android:name=".login.Activity_Password"
@@ -26,20 +28,20 @@
         <activity
             android:name=".login.Activity_Account"
             android:label="@string/title_activity_account"
-            android:theme="@style/Theme.AppCompat.Light" />
+            android:theme="@style/Theme.Restaurant.NoActionBar" />
         <activity
             android:name=".login.Activity_Register"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/Theme.Restaurant.NoActionBar" />
         <activity
             android:name=".menu.Activity_Menu"
             android:label="@string/title_activity_basic"
-            android:theme="@style/Theme.AppCompat.Light" />
+            android:theme="@style/Theme.Restaurant.NoActionBar" />
         <activity
             android:name=".login.Activity_Login"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/Theme.Restaurant.NoActionBar" />
         <activity
             android:name=".login.Activity_First_Access"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:theme="@style/Theme.Restaurant.NoActionBar" />
         <activity
             android:name=".splash.Activity_Splash"
             android:theme="@style/splash_theme">
