--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
 
 
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
-    implementation 'com.androidx.support:CardView-v7:28.0.0'
+    //implementation 'com.androidx.support:CardView-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
 
