--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Restaurant.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".restaurant.Activity_Restaurant_Client"></activity>
+        <activity android:name=".restaurant.Activity_Favourite"></activity>
+        <activity android:name=".menu.Activity_Test" />
+        <activity android:name=".menu.Activity_Menu_Anonymous" />
+        <activity android:name=".restaurant.Activity_Restaurant_Client" />
         <activity android:name=".restaurant.Activity_Restaurants_List_Client" />
         <activity android:name=".notifications.Activity_Notification" />
         <activity android:name=".menu.Activity_Drawer_Menu_User" />
