pagina di dettaglio ristorante

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Restaurant.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".notifications.Activity_Notifications_Admin"></activity>
+        <activity android:name=".restaurant.Activity_Restaurant_Admin"></activity>
+        <activity android:name=".restaurant.Activity_Favourite_Restaurant" />
+        <activity android:name=".notifications.Activity_Notifications_Admin" />
         <activity android:name=".menu.Activity_Menu_Admin" />
         <activity android:name=".restaurant.Activity_Restaurants_List_Admin" />
-        <activity android:name=".restaurant.Activity_Favourite" />
+        <activity android:name=".restaurant.Activity_Favourites" />
         <activity android:name=".menu.Activity_Test" />
         <activity android:name=".menu.Activity_Menu_Anonymous" />
         <activity android:name=".restaurant.Activity_Restaurant_Client" />
