--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
 
+    implementation 'pub.hanks:smallbang:1.2.2'
+    implementation 'io.github.nikartm:image-support:2.0.0'
+
+
 
 }
