--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".notifications.Activity_Notification" />
         <activity android:name=".menu.Activity_Drawer_Menu_User" />
         <activity android:name=".account.Activity_Account" />
+        <activity android:name=".account.Activity_Account_Admin" />
         <activity android:name=".notifications.Activity_Notifications" />
         <activity
             android:name=".account.Activity_Password"
